[f] #10122 fixed popover z-index for editor

--- a/_editor.scss
+++ b/_editor.scss
@@ -79,7 +79,6 @@ body editor{
 		position: absolute;
 		right: 0;
 		top: 0;
-		z-index: 10;
 		width: 52px;
 		> [popover-opener]{
 			width: 52px;
